jasper/force-app/main/default/objects/Lead/fields/Adset_Id__c.field-meta.xml
<CustomField>
    <fullName>Adset_Id__c</fullName>
    <label>Adset Id</label>
    <type>TextArea</type>
</CustomField>