jasper/force-app/main/default/objects/Lead/fields/AG_Related_to__c.field-meta.xml
<CustomField>
    <fullName>AG_Related_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AG_Related_to</label>
    <referenceTo>Assignment_Group__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>