jasper/force-app/main/default/objects/Lead/fields/AI_Lost_Analysis__c.field-meta.xml
<CustomField>
    <fullName>AI_Lost_Analysis__c</fullName>
    <label>AI Lost Analysis</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Stored AI per-case lost analysis (JSON) from the Lost-Case Analysis app.</description>
</CustomField>