jasper/force-app/main/default/objects/Lead/fields/AI_Lost_Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>AI_Lost_Analysis_Date__c</fullName>
    <label>AI Lost Analysis Date</label>
    <type>DateTime</type>
    <description>When the AI per-case lost analysis was last generated.</description>
</CustomField>