jasper/force-app/main/default/objects/Lead/fields/Book_Bike__c.field-meta.xml
<CustomField>
    <fullName>Book_Bike__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Book_Bike</label>
    <type>Checkbox</type>
</CustomField>