jasper/force-app/main/default/objects/Lead/fields/BookingId__c.field-meta.xml
<CustomField>
    <fullName>BookingId__c</fullName>
    <label>BookingId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>