jasper/force-app/main/default/objects/Lead/fields/Buying_Span__c.field-meta.xml
<CustomField>
    <fullName>Buying_Span__c</fullName>
    <label>Buying Span</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within 7 Days</fullName>
            </value>
            <value>
                <fullName>Within 15 Days</fullName>
            </value>
            <value>
                <fullName>Within a Month</fullName>
            </value>
            <value>
                <fullName>Later than a month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>