jasper/force-app/main/default/objects/Lead/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <label>Campaign Id</label>
    <type>TextArea</type>
</CustomField>