jasper/force-app/main/default/objects/Lead/fields/Count_of_Follow_Ups_created__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Follow_Ups_created__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Follow Ups created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>