jasper/force-app/main/default/objects/Lead/fields/Count_of_test_Drives__c.field-meta.xml
<CustomField>
    <fullName>Count_of_test_Drives__c</fullName>
    <label>Count of test Drives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>