jasper/force-app/main/default/objects/Lead/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Created Date (Imported Leads)</label>
    <type>DateTime</type>
</CustomField>