jasper/force-app/main/default/objects/Lead/fields/Created_Date_Imported_Leads__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Imported_Leads__c</fullName>
    <label>Created Date (Imported Leads)</label>
    <type>Date</type>
</CustomField>