jasper/force-app/main/default/objects/Lead/fields/Created_date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <label>Created date &amp; Time</label>
    <type>DateTime</type>
</CustomField>