jasper/force-app/main/default/objects/Lead/fields/data__c.field-meta.xml
<CustomField>
    <fullName>data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>data</label>
    <type>Checkbox</type>
</CustomField>