jasper/force-app/main/default/objects/Lead/fields/Dealer_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Allocation</label>
    <type>Checkbox</type>
</CustomField>