jasper/force-app/main/default/objects/Lead/fields/DLcopy__c.field-meta.xml
<CustomField>
    <fullName>DLcopy__c</fullName>
    <description>Please attach DL Copy Here</description>
    <label>DL Copy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>