jasper/force-app/main/default/objects/Lead/fields/DM_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Status__c</fullName>
    <formula>IF(
    AND(Test_Ride_Given__c = FALSE, TODAY() - DATEVALUE(CreatedDate) &gt; 21),
    &quot;Cold&quot;,
    IF(
        AND(Test_Ride_Given__c = TRUE, ISPICKVAL(Status, &quot;Closed - Lost&quot;)),
        &quot;Nurture&quot;,
        IF(
            AND(Test_Ride_Given__c = FALSE, NOT(ISBLANK(BookingId__c)), TODAY() - DATEVALUE(CreatedDate) &lt;= 21),
            &quot;HOT&quot;,
            IF(
                Test_Ride_Given__c = TRUE,
                &quot;WARM&quot;,
                &quot;&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DM Status</label>
    <type>Text</type>
</CustomField>