jasper/force-app/main/default/objects/Lead/fields/Drivers_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Number__c</fullName>
    <label>Drivers License Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>