jasper/force-app/main/default/objects/Lead/fields/Duplicate_Sources__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Sources__c</fullName>
    <label>Duplicate Sources</label>
    <type>TextArea</type>
</CustomField>