jasper/force-app/main/default/objects/Lead/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <label>Follow Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow up 1</fullName>
            </value>
            <value>
                <fullName>Follow up 2</fullName>
            </value>
            <value>
                <fullName>Follow Up 3</fullName>
            </value>
            <value>
                <fullName>1st Follow up</fullName>
                <isActive>false</isActive>
                <label>1st Follow up</label>
            </value>
            <value>
                <fullName>2nd Follow up</fullName>
                <isActive>false</isActive>
                <label>2nd Follow up</label>
            </value>
            <value>
                <fullName>3rd Follow up</fullName>
                <isActive>false</isActive>
                <label>3rd Follow up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>