jasper/force-app/main/default/objects/Lead/fields/FollowUpDate__c.field-meta.xml
<CustomField>
    <fullName>FollowUpDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FollowUpDate</label>
    <type>Checkbox</type>
</CustomField>