jasper/force-app/main/default/objects/Lead/fields/Future_Lead__c.field-meta.xml
<CustomField>
    <fullName>Future_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future Lead</label>
    <type>Checkbox</type>
</CustomField>