jasper/force-app/main/default/objects/Lead/fields/Home_Test_Ride__c.field-meta.xml
<CustomField>
    <fullName>Home_Test_Ride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Test Ride</label>
    <type>Checkbox</type>
</CustomField>