jasper/force-app/main/default/objects/Lead/fields/Home_Test_Ride_Given__c.field-meta.xml
<CustomField>
    <fullName>Home_Test_Ride_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Test Ride Given</label>
    <type>Checkbox</type>
</CustomField>