jasper/force-app/main/default/objects/Lead/fields/Instore_Test_drive__c.field-meta.xml
<CustomField>
    <fullName>Instore_Test_drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instore Test drive</label>
    <type>Checkbox</type>
</CustomField>