jasper/force-app/main/default/objects/Lead/fields/Is_Assigned_to_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_to_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Assigned_to_User</label>
    <type>Checkbox</type>
</CustomField>