jasper/force-app/main/default/objects/Lead/fields/Is_Subscribed__c.field-meta.xml
<CustomField>
    <fullName>Is_Subscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Subscribed</label>
    <type>Checkbox</type>
</CustomField>