jasper/force-app/main/default/objects/Lead/fields/Junk_Lead__c.field-meta.xml
<CustomField>
    <fullName>Junk_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Junk Lead</label>
    <type>Checkbox</type>
</CustomField>