jasper/force-app/main/default/objects/Lead/fields/Lead_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Dealer_Code__c</fullName>
    <formula>Owner:User.Dealer_Code__c</formula>
    <label>Lead Dealer Code</label>
    <type>Text</type>
</CustomField>