jasper/force-app/main/default/objects/Lead/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <formula>FirstName+&quot; &quot;+LastName</formula>
    <label>Lead Name</label>
    <type>Text</type>
</CustomField>