jasper/force-app/main/default/objects/Lead/fields/Lead_Segment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Segment__c</fullName>
    <label>Lead Segment</label>
    <type>Picklist</type>
    <description>AI-assigned intent segment from the Lead Segregation app.</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>