jasper/force-app/main/default/objects/Lead/fields/Lead_Segment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Segment_Detail__c</fullName>
    <label>Lead Segment Detail</label>
    <type>Text</type>
    <length>255</length>
    <description>AI note on the lead's interest/intent behind the segment.</description>
</CustomField>