jasper/force-app/main/default/objects/Lead/fields/Lead_Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Store_Name__c</fullName>
    <formula>Owner:User.Org__c</formula>
    <label>Lead Store Name</label>
    <type>Text</type>
</CustomField>