jasper/force-app/main/default/objects/Lead/fields/Lost_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Lost_Feedback__c</fullName>
    <label>Lost Feedback</label>
    <type>TextArea</type>
</CustomField>