jasper/force-app/main/default/objects/Lead/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of Delivery Area</fullName>
            </value>
            <value>
                <fullName>Casual enquiry</fullName>
            </value>
            <value>
                <fullName>Customer not enquired</fullName>
            </value>
            <value>
                <fullName>High expectations on product</fullName>
            </value>
            <value>
                <fullName>Lost to competitor</fullName>
                <label>Lost to Competitor</label>
            </value>
            <value>
                <fullName>Retail Finance Issues</fullName>
            </value>
            <value>
                <fullName>Price is high</fullName>
            </value>
            <value>
                <fullName>Purchased in other stores</fullName>
            </value>
            <value>
                <fullName>RNR</fullName>
            </value>
            <value>
                <fullName>Others - need reason</fullName>
            </value>
            <value>
                <fullName>Already Purchased Elsewhere</fullName>
                <isActive>false</isActive>
                <label>Already Purchased Elsewhere</label>
            </value>
            <value>
                <fullName>Battery not Detachable</fullName>
                <isActive>false</isActive>
                <label>Battery not Detachable</label>
            </value>
            <value>
                <fullName>Invalid Contact Information</fullName>
                <isActive>false</isActive>
                <label>Invalid Contact Information</label>
            </value>
            <value>
                <fullName>Junk</fullName>
                <isActive>false</isActive>
                <label>Junk</label>
            </value>
            <value>
                <fullName>Lack of Budget</fullName>
                <isActive>false</isActive>
                <label>Lack of Budget</label>
            </value>
            <value>
                <fullName>Location Issue</fullName>
                <isActive>false</isActive>
                <label>Location Issue</label>
            </value>
            <value>
                <fullName>No Buying Intent</fullName>
                <isActive>false</isActive>
                <label>No Buying Intent</label>
            </value>
            <value>
                <fullName>Not Interested in Buying</fullName>
                <isActive>false</isActive>
                <label>Not Interested in Buying</label>
            </value>
            <value>
                <fullName>Not the Decision Maker</fullName>
                <isActive>false</isActive>
                <label>Not the Decision Maker</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Pricing too High</fullName>
                <isActive>false</isActive>
                <label>Pricing too High</label>
            </value>
            <value>
                <fullName>Product Quality Issues</fullName>
                <isActive>false</isActive>
                <label>Product Quality Issues</label>
            </value>
            <value>
                <fullName>Timing Not Right</fullName>
                <isActive>false</isActive>
                <label>Timing Not Right</label>
            </value>
            <value>
                <fullName>Unresponsive- Max Attempt</fullName>
                <isActive>false</isActive>
                <label>Unresponsive- Max Attempt</label>
            </value>
            <value>
                <fullName>Wrong Product Fit</fullName>
                <isActive>false</isActive>
                <label>Wrong Product Fit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>