jasper/force-app/main/default/objects/Lead/fields/Lost_reason_if_any__c.field-meta.xml
<CustomField>
    <fullName>Lost_reason_if_any__c</fullName>
    <label>Lost reason, if any</label>
    <type>TextArea</type>
</CustomField>