jasper/force-app/main/default/objects/Lead/fields/Out_come__c.field-meta.xml
<CustomField>
    <fullName>Out_come__c</fullName>
    <label>Test Ride Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Still Shopping</fullName>
            </value>
            <value>
                <fullName>Product Quality Issues</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
                <isActive>false</isActive>
                <label>Bad</label>
            </value>
            <value>
                <fullName>Very Bad</fullName>
                <isActive>false</isActive>
                <label>Very Bad</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>