jasper/force-app/main/default/objects/Lead/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>CASE(Locale__c,
&quot;IN&quot;,
IF(LEN(Phone) &gt;= 10, &quot;91&quot; &amp; RIGHT(Phone, 10), &apos;&apos;),
&quot;US&quot;,
IF(LEN(Phone) &gt;= 10, &quot;1&quot; &amp; RIGHT(Phone, 10),&apos;&apos;),
&quot;CA&quot;,
IF(LEN(Phone) &gt;= 10, &quot;1&quot; &amp; RIGHT(Phone, 10),&apos;&apos;),
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>