jasper/force-app/main/default/objects/Lead/fields/PreferredSeller__c.field-meta.xml
<CustomField>
    <fullName>PreferredSeller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Seller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>