jasper/force-app/main/default/objects/Lead/fields/PS_Name__c.field-meta.xml
<CustomField>
    <fullName>PS_Name__c</fullName>
    <label>PS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>