jasper/force-app/main/default/objects/Lead/fields/Qualified_Lead__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Lead__c</fullName>
    <formula>Lead_Dealer_Code__c != null</formula>
    <label>Qualified Lead</label>
    <type>Checkbox</type>
</CustomField>