jasper/force-app/main/default/objects/Lead/fields/Secondary_source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_source__c</fullName>
    <label>Secondary source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tech Park Activities</fullName>
            </value>
            <value>
                <fullName>Auto Expo</fullName>
            </value>
            <value>
                <fullName>Theatre Campaigns</fullName>
            </value>
            <value>
                <fullName>College activities</fullName>
            </value>
            <value>
                <fullName>Exchange Mela</fullName>
            </value>
            <value>
                <fullName>RWA</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Campaign Landing Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>