jasper/force-app/main/default/objects/Lead/fields/Secondary_Sources__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sources__c</fullName>
    <label>Lead Secondary Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
                <label>Web – Google</label>
            </value>
            <value>
                <fullName>Meta</fullName>
                <label>Web – Meta</label>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>River Website</fullName>
                <label>Organic - Web</label>
            </value>
            <value>
                <fullName>91 wheels</fullName>
            </value>
            <value>
                <fullName>Bikewale</fullName>
            </value>
            <value>
                <fullName>Bikedekho</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Tech Park activities</fullName>
            </value>
            <value>
                <fullName>Auto Expo</fullName>
            </value>
            <value>
                <fullName>Theater campaigns</fullName>
            </value>
            <value>
                <fullName>College activities</fullName>
            </value>
            <value>
                <fullName>Mall activities</fullName>
            </value>
            <value>
                <fullName>Exchange Mela</fullName>
            </value>
            <value>
                <fullName>RWA</fullName>
            </value>
            <value>
                <fullName>Outdoor activations</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>ThinkResult</fullName>
            </value>
            <value>
                <fullName>CarBike360</fullName>
            </value>
            <value>
                <fullName>HT Auto</fullName>
            </value>
            <value>
                <fullName>OzoneTel</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
                <isActive>false</isActive>
                <label>Online</label>
            </value>
            <value>
                <fullName>Outdoor activity</fullName>
                <isActive>false</isActive>
                <label>Outdoor activity</label>
            </value>
            <value>
                <fullName>OzoneTel WhatsApp</fullName>
                <isActive>false</isActive>
                <label>OzoneTel WhatsApp</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>