jasper/force-app/main/default/objects/Lead/fields/SendIndemnityform__c.field-meta.xml
<CustomField>
    <fullName>SendIndemnityform__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Indemnity form</label>
    <type>Checkbox</type>
</CustomField>