jasper/force-app/main/default/objects/Lead/fields/Sobject_Load_Balancing_Executed__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Load_Balancing_Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sobject Load Balancing Executed</label>
    <type>Checkbox</type>
</CustomField>