jasper/force-app/main/default/objects/Lead/fields/Source_if_any_other__c.field-meta.xml
<CustomField>
    <fullName>Source_if_any_other__c</fullName>
    <label>Source,if any other</label>
    <type>TextArea</type>
</CustomField>