jasper/force-app/main/default/objects/Lead/fields/Stores_Name__c.field-meta.xml
<CustomField>
    <fullName>Stores_Name__c</fullName>
    <label>Store Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>