jasper/force-app/main/default/objects/Lead/fields/Test_ride_end_date__c.field-meta.xml
<CustomField>
    <fullName>Test_ride_end_date__c</fullName>
    <label>Test ride end date</label>
    <type>DateTime</type>
</CustomField>