jasper/force-app/main/default/objects/Lead/fields/Test_Ride_Given__c.field-meta.xml
<CustomField>
    <fullName>Test_Ride_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Ride Given</label>
    <type>Checkbox</type>
</CustomField>