jasper/force-app/main/default/objects/Lead/fields/testdrives_count__c.field-meta.xml
<CustomField>
    <fullName>testdrives_count__c</fullName>
    <label>Testdrives count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>