jasper/force-app/main/default/objects/Lead/fields/Threshold_Count__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Count__c</fullName>
    <label>Threshold_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>