jasper/force-app/main/default/objects/Lead/fields/Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp__c</fullName>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>