jasper/force-app/main/default/objects/Lead/fields/Utm_Medium__c.field-meta.xml
<CustomField>
    <fullName>Utm_Medium__c</fullName>
    <label>Utm Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>