jasper/force-app/main/default/objects/Lead/fields/Utm_Source__c.field-meta.xml
<CustomField>
    <fullName>Utm_Source__c</fullName>
    <label>Utm Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Meta</fullName>
            </value>
            <value>
                <fullName>Meta_FB</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>