jasper/force-app/main/default/objects/Lead/fields/WhatsApp_Sent_After_Update__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Sent_After_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Lead Book A Test Ride</label>
    <type>Checkbox</type>
</CustomField>